<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">新技能·get√</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="app_intrduce">让每天都能学到新技能！</string>
    
    <string name="left_menu_share">新技能</string>
    <string name="left_menu_beg_skill">求技能</string>
    <string name="left_menu_message">消息</string>
    <string name="left_menu_exit">退出</string>
    
    <string name="register"><u>注册</u></string>
    <string name="login_tips"><u>直接进入主页</u></string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载..</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="share_list_item_content">1.汉字拼音检索，为了方便输入中文的用户在网上搜索，Google允许用户</string>
    <string name="newskill_test">1.汉语拼音输入检索 
为了方便使用中文的用户在网上搜索，Google允许用户直接在键盘上输入汉语拼音来检索相关事物， 例如：输入 shanghaishikebiao 
检索结果提示：您是不是要找： 上海时刻表 这正是我们需要查找的关键词，用户可以据此浏览相关结果，这包括上海地区的各种交通工具的时刻表。如果需要查找更详细的资料“上海飞机航班时刻表 ”，则只要在原来的检索结果“上海时刻表”中间输入feijihangban，例如：上海feijihangban时刻表 </string>
    <string name="begskill_test">google如此强大，哪位大神能否指教下如何优雅地使用Google来工作效率，小弟不甚感激！</string>
    
    <string name="back">&lt;&#160;返回</string>
    
    <color name="black">#000000</color>
    <color name="type_color">#343434</color>
    <color name="white">#ffffff</color>
    <color name="main_blue">#00bfff</color>
    <color name="light_yellow">#FDAA29</color>
    <color name="light_gray">#F2F2F2</color>
    <color name="light_green">#C7EDCC</color>
    
    <color name="transparent">#00000000</color>
    <color name="gray">#666666</color>
    <color name="red">#bb2222</color>
    <color name="green">#88eccf2d</color>
    
    <color name="yellow">#ccaa22</color>
    <color name="blue">#66bbcc</color>
    <color name="pink">#cc5588</color>
    <color name="purple">#aaaa66bb</color>
</resources>
