<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mlist"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginRight="5dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_personal"
        android:layout_width="wrap_content"
        android:layout_height="75dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_marginLeft="3dp" >

            <ImageView
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/me_head_bg" />

            <cn.edu.stu.view.CircularImage
                android:id="@+id/cover_user_photo"
                android:layout_width="60.0dip"
                android:layout_height="60.0dip"
                android:layout_centerInParent="true"
                android:src="@drawable/pic" />
        </RelativeLayout>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/left_frame"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="150dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line_between" />

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/left_frame"
                android:textColor="@color/black"
                android:text="@string/left_menu_share" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line_between" />

        <LinearLayout
            android:id="@+id/ll_beg_skill"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/left_frame"
                android:textColor="@color/black"
                android:text="@string/left_menu_beg_skill" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line_between" />

        <LinearLayout
            android:id="@+id/ll_message"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/left_frame"
                android:textColor="@color/black"
                android:text="@string/left_menu_message" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line_between" />

        <LinearLayout
            android:id="@+id/ll_exit"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/left_frame"
                android:textColor="@color/black"
                android:text="@string/left_menu_exit" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>