<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/main_blue"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_intrduce"
                android:textColor="@color/gray"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_line1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_logo"
        android:layout_marginTop="15dp"
        android:background="@drawable/line_between" />

    <LinearLayout
        android:id="@+id/ll_usename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_line1"
        android:layout_marginLeft="@dimen/left_right_space"
        android:layout_marginRight="@dimen/left_right_space"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="用户名"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_usename"
        android:layout_marginLeft="@dimen/left_right_space"
        android:layout_marginRight="@dimen/left_right_space"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="密码"
            android:paddingLeft="15dp"
            android:password="true"
            android:singleLine="true"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_password"
        android:layout_marginLeft="@dimen/left_right_space"
        android:layout_marginRight="@dimen/left_right_space"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_blue"
            android:text="登陆"
            android:textColor="@color/white" 
            android:textSize="20sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/line_between" />

    <LinearLayout
        android:id="@+id/ll_login4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_line2"
        android:layout_marginLeft="@dimen/left_right_space"
        android:layout_marginRight="@dimen/left_right_space"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1" >

            <CheckBox
                android:id="@+id/cb_remember"
                style="@style/CheckboxRememberTheme"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="记住我"
                android:textSize="15dp" />
        </LinearLayout>

        <Button
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:background="@color/light_yellow"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_goto_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tips"
            android:textColor="@color/main_blue"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>